<resources>
    <string name="app_name">Рыбин Александр</string>

    <!--Text field descriptions-->
    <string name="mobile_field_desc">Мобильный телефон</string>
    <string name="email_field_desc">E-mail</string>
    <string name="vk_field_desc">Профиль в VK</string>
    <string name="git_field_desc">Репозиторий</string>
    <string name="about_field_desc">О себе</string>
    <string name="rating_field_desc">Рейтинг</string>
    <string name="codelines_field_desc">Написано строк кода</string>
    <string name="projects_field_desc">Проектов</string>
    <string name="my_profile">Мой профиль</string>
    <string name="team">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choice.message">Выберите фото</string>

    <!-- Login activity -->
    <string name="password">Пароль</string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="forgot_password">Забыли пароль?</string>

    <!--Temporary strings-->
    <string name="temporary_rating_14">14</string>
    <string name="temporary_code_lines_2191">2191</string>
    <string name="temporary_projects_4">4</string>
    <string name="temporary_phone_number">8(800)555-35-35</string>
    <string name="temporary_email">mail@hotmail.com</string>
    <string name="temporary_vk">vk.com/id61582684</string>
    <string name="temporary_repo">github.com/Gematrin/DevIntensive</string>
    <string name="temporary_about">There are only two things worse than an empty canvas: death and taxes.</string>
    <string name="remember_pass_url">http://devintensive.softdesign-apps.ru/forgotpass</string>
    <string name="no_data">Нет данных</string>
    <string name="search_hint">Поиск пользователя</string>
    <string name="toast_camera_makefile_error">Ошибка при создании файла изображения</string>
    <string name="camera_request_success">Разрешение на доступ к камере успешно получено</string>
    <string name="write_request_success">Разрешение на запись файлов успешно получено</string>
    <string name="no_mail_client_error">Ошибка: не найдено приложений для отправки почты</string>
    <string name="permissions_request_description">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="allow">Разрешить</string>
    <string name="wrong_username_or_pass">Неверный логин или пароль</string>
    <string name="authorization_error">Ошибка авторизации</string>
    <string name="no_correct_response_from_server">Сервер не вернул корректного ответа</string>
    <string name="network_unavailable">Сеть недоступна</string>
    <string name="open_profile">Просмотр</string>
    <string name="getting_user_list_error">Ошибка при получении списка пользователей</string>
    <string name="server_connection_failed">Ошибка при подключении к серверу</string>
    <string name="cant_get_user_list">Список пользователей не может быть загружен</string>
    <string name="enter_user_name">Введите имя пользователя</string>
</resources>
