<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/nestedview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity"
        android:orientation="vertical">

        <!--Mobile-->
        <LinearLayout style="@style/userInfoBackground">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                style="@style/inputField">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.softdesign.devintensive.ui.view.EditText_Roboto
                        style="@style/editText"
                        android:id="@+id/phone_et"
                        android:hint="@string/mobile_field_desc"
                        android:inputType="phone"
                        android:text="@string/temporary_phone_number"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/call_button"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:layout_marginStart="@dimen/spacing_larger_72"/>

        <!--Email-->
        <LinearLayout style="@style/userInfoBackground">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/inputField">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.softdesign.devintensive.ui.view.EditText_Roboto
                        style="@style/editText"
                        android:id="@+id/email_et"
                        android:hint="@string/email_field_desc"
                        android:inputType="textEmailAddress"
                        android:text="@string/temporary_email"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/send_button"
                android:src="@drawable/ic_send_black_24dp"/></LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:layout_marginStart="@dimen/spacing_larger_72"/>

        <!-- VK-->
        <LinearLayout style="@style/userInfoBackground">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_circle"/>

            <LinearLayout
                style="@style/inputField">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.softdesign.devintensive.ui.view.EditText_Roboto
                        style="@style/editText"
                        android:id="@+id/vk_et"
                        android:hint="@string/vk_field_desc"
                        android:inputType="textUri"
                        android:text="@string/temporary_vk"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/vk_button"
                android:src="@drawable/ic_visibility_black_24dp"/></LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:layout_marginStart="@dimen/spacing_larger_72"/>

        <!--Repo-->
        <LinearLayout style="@style/userInfoBackground">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>

            <LinearLayout
                style="@style/inputField">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.softdesign.devintensive.ui.view.EditText_Roboto
                        style="@style/editText"
                        android:id="@+id/repo_et"
                        android:hint="@string/git_field_desc"
                        android:inputType="textUri"
                        android:text="@string/temporary_repo"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/repo_button"
                android:src="@drawable/ic_visibility_black_24dp"/></LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:layout_marginStart="@dimen/spacing_larger_72"/>

        <!--About-->
        <LinearLayout style="@style/userInfoBackground">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                style="@style/inputField"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/spacing_normal_16">

                    <com.softdesign.devintensive.ui.view.EditText_Roboto
                        style="@style/editText"
                        android:id="@+id/about_et"
                        android:hint="@string/about_field_desc"
                        android:inputType="textMultiLine"
                        android:text="@string/temporary_about"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout></LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>