<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_bg_hdpi"
    android:id="@+id/login_coordinator_container">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.CardView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp">

        <View
            android:id="@+id/login_indicator"
            android:layout_width="4dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:paddingRight="28dp"
            android:paddingLeft="28dp"
            android:paddingBottom="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>

            <com.softdesign.devintensive.ui.view.EditText_Roboto
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email_field_desc"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:inputType="textEmailAddress"/>

            <com.softdesign.devintensive.ui.view.EditText_Roboto
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/login_button"
                style="@style/AppTheme.Button.Red"
                android:minWidth="126dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:theme="@style/AppTheme.Button.Red"/>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:textColor="@color/gray_light"
                android:layout_marginTop="@dimen/spacing_normal_16"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>