<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    android:layout_marginTop="@dimen/spacing_small_8"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.view.AspectRatioImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/userphoto0"
                app:aspect_ratio="1.78"
                android:scaleType="centerCrop"/>

            <com.softdesign.devintensive.ui.view.TextView_Roboto
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_full_name_txt"
                android:text="Doe, John"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:layout_gravity="bottom"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_large_72"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">

                <com.softdesign.devintensive.ui.view.TextView_Roboto
                    android:id="@+id/rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <com.softdesign.devintensive.ui.view.TextView_Roboto
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_field_desc"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.5">

                <com.softdesign.devintensive.ui.view.TextView_Roboto
                    android:id="@+id/codelines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <com.softdesign.devintensive.ui.view.TextView_Roboto
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/codelines_field_desc"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">

                <com.softdesign.devintensive.ui.view.TextView_Roboto
                    android:id="@+id/projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <com.softdesign.devintensive.ui.view.TextView_Roboto
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projects_field_desc"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
        <com.softdesign.devintensive.ui.view.TextView_Roboto
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_txt"
            android:textColor="@color/gray_light"
            android:text="@string/temporary_about"
            android:maxLines="3"
            android:paddingRight="@dimen/spacing_normal_16"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:textSize="14sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_small_8"/>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/more_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_profile"
            android:textColor="@color/colorAccent"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"/>
    </LinearLayout>
</android.support.v7.widget.CardView>